<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="554dp"
    android:layout_height="354dp"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="30dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/information"
        android:textColor="@color/white"
        android:textSize="@dimen/setitem_text_size1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/setitem_text_size1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/setitem_text_size1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/save_dischange_yes"
            style="@style/button"
            android:text="@string/but_yes" />

        <Button
            android:id="@+id/save_dischange_no"
            style="@style/button"
            android:layout_marginLeft="50dp"
            android:text="@string/but_no" />
    </LinearLayout>

</LinearLayout>        
